k3s/compute/ray-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ray-dashboard
  namespace: compute
  labels:
    app.kubernetes.io/name: ray-dashboard
  annotations:
    gethomepage.dev/description: Ray Dashboard
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Compute
    gethomepage.dev/icon: google-compute-engine.png
    gethomepage.dev/name: Ray
    gethomepage.dev/pod-selector: "ray.io/node-type=head"
spec:
  rules:
  - host: dashboard.ray.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ray-compute-head-svc
            port:
              number: 8265
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ray-client
  namespace: compute
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: client.ray.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ray-compute-head-svc
            port:
              number: 10001
